--- a/common/common.css
+++ b/common/common.css
@@ -255,10 +255,10 @@
 	/* #endif */
 }
 
-/* .text-ellipsis-two{
+.text-ellipsis-two{
 text-overflow: -o-ellipsis-lastline;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;
 -webkit-line-clamp: 2;-webkit-box-orient: vertical;
-} */
+}
 /* 文字粗细和斜体 */
 .font-weight-light {font-weight: 300;}      /*细*/
 .font-weight-lighter {font-weight: 100;}/*更细*/
